--- a/style.css
+++ b/style.css
@@ -12,11 +12,11 @@
     align-items: center;
     justify-content: space-between;
     flex-flow: row wrap; */
-    border: 1px solid orange;
+    border: 1px solid rgb(139, 136, 172);
     padding: 20px;
     margin-left: auto;
     margin-right: auto;
-    background-color: peachpuff;
+    background-color: rgba(234, 240, 255, 0.651);
     margin-bottom: 20px;
     max-width: 1000px;
 }
@@ -26,18 +26,19 @@
     width:200px;
     height:200px;
     text-align:center;
-    overflow:hidden;    
+    /* overflow:hidden;     */
 }
 
 /* .contentArea {
     float: left;
 } */
  .pic {
-    
-    min-width:200px;
+    max-width: 150px;
+    max-height: 150px;
+    /* min-width:150px;
     max-width:none; 
-    height:200px;
-    margin:0 -100%; 
+    height:150px; */
+    /* margin:0 -100%;  */
 } 
 
 li {
@@ -55,3 +56,10 @@ li {
 .container {
     max-width: 80vw;
 }
+
+@media screen and (max-width: 600px) {
+    .news {
+      display: flex;
+      flex-direction: column;
+    }
+  }
