--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 }
 
 #panel-upper {
-    margin: 5px;
+    margin-bottom: 10px;
     padding: 10px;
     text-align: center;
     border-bottom: 1px solid gray;
@@ -19,10 +19,6 @@
     margin: 20px;
 }
 .news {
-    /* display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-flow: row wrap; */
     border: none;
     padding: 20px;
     margin-left: auto;
@@ -30,40 +26,24 @@
     background-color: rgba(224, 224, 224, 0.41);
     margin-bottom: 20px;
     max-width: 1000px;
-    border-radius: 10px;
 }
 
 .imgArea {
-    /* float: right; */
     width:200px;
     height:170px;
     text-align:center;
     overflow:hidden;    
 }
 
-/* .contentArea {
-    float: left;
-} */
  .pic {
     max-width: 300px;
     max-height: 300px;
-    /* min-width:150px;
-    max-width:none; 
-    height:150px; */
     margin:0 -100%; 
 } 
 
 li {
     list-style: none;
 }
-
-/* .left-panel {
-    background-color: peachpuff;
-}
-
-.right-panel {
-    background-color: peachpuff;
-} */
 
 .container {
     max-width: 80vw;
