--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@
 }
 .title {
     font-size:  20px;
-    font-weight: bold;
+    font-weight: 700;
+    font-style: italic;
 }
 
 #panel-upper {
@@ -37,7 +38,7 @@
 
  .pic {
     max-width: 300px;
-    max-height: 300px;
+    max-height: 200px;
     margin:0 -100%; 
 } 
 
