--- a/style.css
+++ b/style.css
@@ -20,11 +20,12 @@
     margin: 20px;
 }
 .news {
-    border: none;
+    border: 1px solid rgba(128, 128, 128, 0.548);
+    border-radius: 15px;
     padding: 20px;
     margin-left: auto;
     margin-right: auto;
-    background-color: rgba(224, 224, 224, 0.41);
+    /* background-color: rgba(224, 224, 224, 0.41); */
     margin-bottom: 20px;
     max-width: 1000px;
 }
