--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@
 }
 
 .searchbox {
+    padding: 5px;
     margin: 20px;
 }
 .news {
@@ -31,16 +32,19 @@
 }
 
 .imgArea {
-    width:200px;
-    height:170px;
+    max-width:220px;
+    max-height:170px;
     text-align:center;
-    overflow:hidden;    
+    overflow:hidden;  
+    padding:0;
+    border-radius: 7px;  
 }
 
+
  .pic {
-    max-width: 300px;
-    max-height: 200px;
-    margin:0 -100%; 
+    width: 220px;
+    height: 170px;
+    object-fit: cover;
 } 
 
 li {
@@ -48,7 +52,7 @@ li {
 }
 
 .container {
-    max-width: 80vw;
+    max-width: 90vw;
 }
 
 @media screen and (max-width: 600px) {
@@ -64,4 +68,9 @@ li {
 
   .source, .publishDate, .seeMore {
       font-size: 14px;
+      margin: 5px;
+  }
+
+  .card {
+      max-width: 1200px;
   }
